Android: use landscape and portrait
This is as opposed to requiring a particular width and
height.

--- a/androidgcs/res/layout-land/tablet_control.xml
+++ b/androidgcs/res/layout-land/tablet_control.xml
@@ -7,34 +7,25 @@
     <!-- The main content view -->
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        android:baselineAligned="false"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal" >
+        android:layout_height="match_parent" >
 
-        <LinearLayout
+        <fragment
+            android:id="@+id/pfd"
+            android:name="org.taulabs.androidgcs.fragments.PFD"
             android:layout_width="0dp"
+            android:layout_weight="0.7"
+            android:layout_height="match_parent"  />
+
+        <fragment
+            android:id="@+id/map"
+            android:name="org.taulabs.androidgcs.fragments.Map"
+            android:layout_width="0dp"
+            android:layout_weight="1.2"
             android:layout_height="match_parent"
-            android:layout_weight="1.5"
-            android:orientation="vertical" >
-
-            <fragment
-                android:id="@+id/pfd"
-                android:name="org.taulabs.androidgcs.fragments.PFD"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.33"
-                tools:layout="@layout/pfd" />
-
-            <fragment
-                android:id="@+id/map"
-                android:name="org.taulabs.androidgcs.fragments.Map"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="0.66"
-                android:layout_marginTop="5dp"  />
-        </LinearLayout>
+            android:layout_marginLeft="5dp"  />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -49,40 +40,40 @@
 
                 <ToggleButton
                     android:id="@+id/positionHoldButton"
-                    android:layout_width="80dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:onClick="onToggle"
-                    android:textOff="PH"
-                    android:textOn="PH" />
+                    android:textOff="Position Hold"
+                    android:textOn="Position Hold" />
 
                 <ToggleButton
                     android:id="@+id/rthButton"
-                    android:layout_width="80dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:onClick="onToggle"
-                    android:textOff="RTH"
-                    android:textOn="RTH" />
+                    android:textOff="Return to Home"
+                    android:textOn="Return to Home" />
 
                 <ToggleButton
                     android:id="@+id/rttButton"
-                    android:layout_width="80dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:onClick="onToggle"
-                    android:textOff="RTT"
-                    android:textOn="RTT" />
+                    android:textOff="Return to Tablet"
+                    android:textOn="Return to Tablet" />
 
                 <ToggleButton
                     android:id="@+id/pathPlannerButton"
-                    android:layout_width="80dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:onClick="onToggle"
-                    android:textOff="Path"
-                    android:textOn="Path" />
+                    android:textOff="Fly Path"
+                    android:textOn="Fly Path" />
 
                 <ToggleButton
                     android:id="@+id/followTabletButton"
-                    android:layout_width="80dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:onClick="onToggle"
                     android:textOff="Follow Me"
@@ -90,7 +81,7 @@
 
                 <ToggleButton
                     android:id="@+id/landButton"
-                    android:layout_width="80dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:onClick="onToggle"
                     android:textOff="Land"
@@ -98,19 +89,20 @@
             </RadioGroup>
 
             <ToggleButton
-                android:id="@+id/cameraPoiButton"
-                android:layout_width="80dp"
+                android:id="@+id/transmitterControl"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:onClick="onPoiToggle"
-                android:textOff="POI"
-                android:textOn="POI" />
+                android:textOff="Transmitter Control"
+                android:textOn="Tablet Control" />
 
             <ToggleButton
-                android:id="@+id/transmitterControl"
-                android:layout_width="80dp"
+                android:id="@+id/cameraPoiButton"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:textOff="TX"
-                android:textOn="Tablet" />
+                android:layout_marginTop="32dp"
+                android:onClick="onPoiToggle"
+                android:textOff="POI Track"
+                android:textOn="POI Track" />
         </LinearLayout>
     </LinearLayout>
 
