--- a/androidgcs/res/layout/object_viewer.xml
+++ b/androidgcs/res/layout/object_viewer.xml
@@ -7,10 +7,12 @@
     tools:context=".ObjectEditor" >
 
     <!-- View android:layout_width="200dp" android:layout_height="1dip" android:background="#FFFFFFFF" / -->
+
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="4dip"
         android:layout_weight="1.56" >
 
         <TextView
@@ -19,26 +21,44 @@
             android:layout_height="wrap_content" />
     </ScrollView>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_marginTop="4dip"
+        android:background="?android:attr/dividerVertical" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_weight="1"
         android:gravity="right" >
 
+        <View
+            android:layout_width="1dip"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="4dip"
+            android:layout_marginRight="4dip"
+            android:background="?android:attr/dividerVertical" />
+        
         <Button
             android:id="@+id/editButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
+            android:background="?android:attr/selectableItemBackground"
             android:text="@string/edit" />
+
+        <View
+            android:layout_width="1dip"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="4dip"
+            android:layout_marginRight="4dip"
+            android:background="?android:attr/dividerVertical" />
 
         <Button
             android:id="@+id/object_load_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_toLeftOf="@+id/editButton"
+            android:background="?android:attr/selectableItemBackground"
             android:text="@string/load" />
     </LinearLayout>
 
