--- a/ground/gcs/src/plugins/config/modules.ui
+++ b/ground/gcs/src/plugins/config/modules.ui
@@ -349,8 +349,11 @@
           </item>
           <item row="1" column="1">
            <widget class="QDoubleSpinBox" name="sb_voltageCalibration">
+            <property name="suffix">
+             <string> mV/V</string>
+            </property>
             <property name="decimals">
-             <number>6</number>
+             <number>4</number>
             </property>
             <property name="maximum">
              <double>1.000000000000000</double>
@@ -434,8 +437,11 @@
           </item>
           <item row="1" column="1">
            <widget class="QDoubleSpinBox" name="sb_currentCalibration">
+            <property name="suffix">
+             <string> mV/A</string>
+            </property>
             <property name="decimals">
-             <number>6</number>
+             <number>4</number>
             </property>
             <property name="maximum">
              <double>1.000000000000000</double>
