GCS config:Renamed airframe.ui scrollArea to avoid popup on form opening
QtCreator bothers you with a popup if you have more than one widget on
your form with the same name. This happens when you manually edit ui
files.

--- a/ground/gcs/src/plugins/config/airframe.ui
+++ b/ground/gcs/src/plugins/config/airframe.ui
@@ -37,7 +37,7 @@
         <number>0</number>
        </property>
        <item row="0" column="0">
-        <widget class="QScrollArea" name="scrollArea">
+        <widget class="QScrollArea" name="scrollArea_1">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
